# Multithread-Programming

C/: CMakeLists.txt  manager.c  player.c  structures.h
C++/: turnstile.cpp  turnstile.h
java/: CzytelnicyPisarze.java  ProducenciKonsumenci.java  Swapper.java  SwapperSemaphore.java
